third_party/rust/cxx/v1/crate/tests/ui/const_fn.stderr
error: const extern function is not supported
 --> $DIR/const_fn.rs:4:9
  |
4 |         const fn f();
  |         ^^^^^^^^^^^^^
