third_party/rust/cxx/v1/crate/tests/ui/const_fn.rs
#[cxx::bridge]
mod ffi {
    extern "Rust" {
        const fn f();
    }
}

const fn f() {}

fn main() {}
